<resources>
    <string name="app_name">Drink Water</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="statistic">Statistic</string>
    <string name="today">Today</string>
    <string name="drink_detail">Drink Detail</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="you_have_to_drink">You have to drink</string>
    <string name="intake">Intake</string>
    <string name="hot_day">Hot day</string>
    <string name="active">Active</string>
    <string name="enough_drink">You drink enough today</string>
    <string name="keep_it_that_way">Keep it that way</string>
    <string name="greetings">Greetings!</string>
    <string name="our_body_is_70_water">Our body is 70% water</string>
    <string name="everyday_we_lose_about_2_5_litres_water">Everyday we lose about 2,5 litres water</string>
    <string name="lack_of_water_can_lead_to_headaches_fatigue_and_even_heart_attack">Lack of water can lead to headaches, fatigue and even heart attack</string>
    <string name="drink_more_water_and_be_healthy">Drink more water and be healthy!</string>
    <string name="daily_water_intake">Daily water intake</string>
    <string name="enter_your_parameters_in_order_to_calculate_your_water_daily_norm">Enter your parameters in order to calculate your water daily norm</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="physical_activity">Physical Activity</string>
    <string name="climate">Climate</string>
    <string name="weight">Weight</string>
    <string name="your_daily_intake">Your daily intake</string>
    <string name="not_all_drinks_are_equally_good_for_us">Not all drinks are equally good for us!</string>
    <string name="pure_water_is_the_best_choice_for_water_balance">Pure water is the best choice for water balance</string>
    <string name="tea_and_coffee_are_99_effective">Tea and Coffee are 99% effective</string>
    <string name="that_means_that_after_every_alcoholic_drink_you_should_drink_additional_amound_of_water_to_restore_water_balance">That means that after every alcoholic drink you should drink additional amount of water to restore water balance</string>
    <string name="every_alcoholic_drink_has_negative_coefficient_for_thirst_quenching_because_of_it_s_diuretic_effect">Every alcoholic drink has negative coefficient for thirst quenching because of its diuretic effect</string>
    <string name="vibration">Vibration</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="female">Female</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="_45_minutes">45 minutes</string>
    <string name="_1_hour">1 hours</string>
    <string name="_2_hour">2 hours</string>
    <string name="_1h30">1 hour 30 minutes</string>
    <string name="_2h30">2 hour 30 minutes</string>
    <string name="_3h">3 hours</string>
    <string name="_3h30">3 hours 30 minutes</string>
    <string name="_4h">4 hours</string>
    <string name="less_activity">Less activity</string>
    <string name="less_1_hour">Less 1 hour</string>
    <string name="more_1_hour">More 1 hour</string>
    <string name="manual_labor">Manual labor</string>
    <string name="mon">Mo</string>
    <string name="wed">We</string>
    <string name="tue">Tu</string>
    <string name="thu">Th</string>
    <string name="fri">Fr</string>
    <string name="sat">Sa</string>
    <string name="sun">Su</string>
    <string name="my_profile">My Profile</string>
    <string name="unit">Unit</string>
    <string name="my_daily_water_intake">My Daily Water Intake</string>
    <string name="my_themes">My Themes</string>
    <string name="sychronization">Synchronization</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate us</string>
    <string name="contact_us">Contact us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="turn_on">Turn on</string>
    <string name="turn_off">Turn off</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="sound">Sound</string>
    <string name="export_data">Export data</string>
    <string name="about">About</string>
    <string name="set_up_notification">Set up notification</string>
    <string name="drink_types">Drink types</string>
    <string name="water">Water</string>
    <string name="coffee">Coffee</string>
    <string name="tea">Tea</string>
    <string name="soft_drink">Soft drink</string>
    <string name="juice">Juice</string>
    <string name="plant_milk">Plant milk</string>
    <string name="milk">Milk</string>
    <string name="beer">Beer</string>
    <string name="wine">Wine</string>
    <string name="spirits">Spirits</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose time</string>
    <string name="choose_interval">Choose interval</string>
    <string name="first_notification">First Notification</string>
    <string name="last_notification">Last Notification</string>
    <string name="interval">Interval</string>
    <string name="choose_sound">Choose sound</string>
    <string name="choose_climate">Choose climate</string>
    <string name="choose_activity">Choose physical activity</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="cold">Cold</string>
    <string name="temperate">Temperate</string>
    <string name="hot">Hot</string>
    <string name="sedentary">Sedentary</string>
    <string name="light">Light</string>
    <string name="high">High</string>
    <string name="physical_labor">Physical labor</string>
    <string name="_default">Default</string>
    <string name="none">None</string>
    <string name="time_out">This is in the future. Please try again</string>
    <string name="delete_all">Delete All</string>
    <string name="all_data_will_be_cleard_continue">All data will be cleard. Continue?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="notification_is_disable_enter_go_to_setting_to_enable_it">Notification is disable. Enter Enable to enable it</string>
    <string name="enable">Enable</string>
    <string name="daily_norm">"Daily norm: "</string>
    <string name="reminder_water">Water reminder</string>
    <string name="notification_was_set">"Notification was set "</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="repeat">Repeat</string>
    <string name="choose_repeat">Choose repeat</string>
    <string name="every_mon">Monday</string>
    <string name="every_sat">Saturday</string>
    <string name="every_sun">Sunday</string>
    <string name="every_fri">Friday</string>
    <string name="every_thu">Thursday</string>
    <string name="every_wed">Wednesday</string>
    <string name="every_tue">Tuesday</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="all_data_was_removed">All data was removed</string>
    <string name="no_data_yet">No data yet</string>
    <string name="alarm">Alarm</string>
    <string name="got_it">Got it</string>
    <string name="you_need_to_get">You need to drink</string>
    <string name="exit">Exit</string>
    <string name="exit_application">Exit Application?</string>
    <string name="are_you_sure_you_want_to_exit_water_drinking_reminder">Are you sure you want to exit Water Drinking Reminder?</string>
</resources>