<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="32dp"
    android:id="@+id/base_dialog_bottom_sheet_fragment"
    android:background="@drawable/container_corner_32dp"
    android:backgroundTint="@color/white"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_dialog_tv"
            style="@style/text.Blue"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/delete_all"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/warning_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="16dp"
        style="@style/text.Blue"
        android:text="@string/all_data_will_be_cleard_continue" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_bt"
        android:enabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button"
        android:text="@string/delete"
        android:textColor="@color/red_error"
        android:padding="14dp"
        android:textSize="14sp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="#EDEEF1"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_bt"
            android:enabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:padding="14dp"
            android:textSize="14sp"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/blue"
            android:layout_marginBottom="16dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>